--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "DefaultConnection": "Server=MHM\\SQLEXPRESS;Database=Business_DecisionDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
